--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 [![Travis-CI Build Status](https://travis-ci.org/kisungyou/CovTools.svg?branch=master)](https://travis-ci.org/kisungyou/CovTools)
 [![](https://cranlogs.r-pkg.org/badges/CovTools)](https://cran.r-project.org/package=CovTools)
 
-Covariance are of universal prevalence across various disciplines within statistics. 
+Covariance is of universal prevalence across various disciplines within statistics. 
 This package aims at providing a rich collection of geometric and statistical tools for a variety of inferences on **covariance** structures as well as its inverse called **precision** matrix. See the package help file by `help("package-CovTools")` in R console for the list of available functions.
 
 ## Installation
@@ -34,3 +34,73 @@ or the development version from github:
 ## library(devtools)
 devtools::install_github("kisungyou/CovTools")
 ```
+
+## List of Available Methods
+
+We offer various methods for covariance and symmetric positive-definite matrices. Below is the list of functions implemented in our package.
+
+### (0). Elementary Operations
+| function name | description |
+|---------------|:-------------------|
+| `CovDist` | computes pairwise distance for symmetric positive-definite matrices |
+| `CovMean` | estimate mean/average covariance matrix |
+
+### (1). Estimation : Covariance
+| function name | authors | description    |
+|---------------|------------------|:-------------------|
+| `CovEst.adaptive`| [Cai and Liu (2011)][1] | adaptive thresholding |
+| `CovEst.hard`    | [Bickel and Levina (2008)][2] | hard thresholding |
+| `CovEst.hardPD`  | [Fan et al. (2013)][3] | hard thresholding under positive-definiteness constraint |
+| `CovEst.nearPD`  | [Qi and Sun (2006)][4] | nearest positive-definite matrix projection |
+| `CovEst.soft`    | [Antoniadis and Fan][5] | soft thresholding |
+| `CovEst.2003LW`  | [Ledoit and Wolf][17] | linear shrinkage estimation |
+
+
+### (2). Estimation : Precision
+| function name | authors | description    |
+|---------------|------------------|:-------------------|
+| `PreEst.2014An` | [An et al. (2014)][6] | banded precision estimation via bandwidth test |
+| `PreEst.2014Banerjee` | [Banerjee and Ghosal (2014)][7] | Bayesian estimation of a banded precision matrix |
+| `PreEst.2017Lee` | [Lee and Lee (2017)][8] | Bayesian estimation of a banded precision matrix |
+| `PreEst.glasso` | [Friedman et al. (2008)][9] | graphical lasso |
+
+### (3). Hypothesis Test : 1-sample 
+| function name | authors | description    |
+|---------------|------------------|:-------------------|
+| `BCovTeset1.mxPBF` | [Lee et al. (2018)][10] | Bayesian test using Maximum Pairwise Bayes Factor |
+| `CovTest1.2013Cai` | [Cai and Ma (2013)][11] | Test by Cai and Ma |
+| `CovTest1.2014Srivastava` | [Srivastava et al. (2014)][12] | Test by Srivastava, Yanagihara, and Kubokawa |
+
+### (4). Hypothesis Test : 2-sample
+| function name | authors | description    |
+|---------------|------------------|:-------------------|
+| `CovTest2.2013Cai` | [Cai and Ma (2013)][13] | Test by Cai and Ma |
+
+### (5). Hypothesis Test : 1-sample Diagonal
+| function name | authors | description    |
+|---------------|------------------|:-------------------|
+| `BDiagTest1.mxPBF`  | [Lee et al. (2018)][14] | Bayesian Test using Maximum Pairwise Bayes Factor |
+| `DiagTest1.2011Cai` | [Cai and Jiang (2011)][15] | Test by Cai and Jiang |
+| `DiagTest1.2015Lan` | [Lan et al. (2015)][16] | Test by Lan, Luo, Tsai, Wang, and Yang |
+
+
+[17]: https://doi.org/10.1016/S0927-5398(03)00007-0
+[16]: http://www.tandfonline.com/doi/abs/10.1080/07350015.2014.923317
+[15]: http://projecteuclid.org/euclid.aos/1305292044.
+[14]: http://arxiv.org/abs/1809.03105
+[13]: https://doi.org/10.3150/12-BEJ455
+[12]: https://doi.org/10.1016/j.jmva.2014.06.003
+[11]: https://doi.org/10.3150/12-BEJ455
+[10]: http://arxiv.org/abs/1809.03105
+[9]: https://doi.org/10.1093/biostatistics/kxm045
+[8]: https://arxiv.org/abs/1707.01143
+[7]: https://doi.org/10.1214/14-EJS945
+[6]: https://doi.org/10.1093/biomet/asu006
+[5]: https://doi.org/10.1198/016214501753208942
+[4]: https://doi.org/10.1137/050624509
+[3]: https://doi.org/10.1111/rssb.12016
+[2]: https://projecteuclid.org/euclid.aos/1231165180
+[1]: https://www.tandfonline.com/doi/abs/10.1198/jasa.2011.tm10560
+
+
+
