--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -12,7 +12,7 @@
 	month = dec,
 	year = {2008},
 	pages = {2577--2604},
-	file = {[Bickel_Levina.2008] Covariance regularization by thresholding.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Bickel_Levina.2008] Covariance regularization by thresholding.pdf:application/pdf}
+	file = {[Bickel.2008] Covariance regularization by thresholding.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Bickel.2008] Covariance regularization by thresholding.pdf:application/pdf}
 }
 
 @article{fan_overview_2016,
@@ -29,7 +29,7 @@
 	month = feb,
 	year = {2016},
 	pages = {C1--C32},
-	file = {[Fan.2016] An overview of the estimation of large covariance and precision matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/[Fan.2016] An overview of the estimation of large covariance and precision matrices.pdf:application/pdf}
+	file = {[Fan.2016] An overview of the estimation of large covariance and precision matrices.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Fan.2016] An overview of the estimation of large covariance and precision matrices.pdf:application/pdf}
 }
 
 @article{arsigny_log-euclidean_2006,
@@ -46,10 +46,10 @@
 	month = aug,
 	year = {2006},
 	pages = {411--421},
-	file = {[Arsigny.2006] Log-Euclidean metrics for fast and simple calculus on diffusion tensors.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S3. Metric/[Arsigny.2006] Log-Euclidean metrics for fast and simple calculus on diffusion tensors.pdf:application/pdf}
+	file = {[Arsigny.2006] Log-Euclidean metrics for fast and simple calculus on diffusion tensors.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Arsigny.2006] Log-Euclidean metrics for fast and simple calculus on diffusion tensors.pdf:application/pdf}
 }
 
-@incollection{weickert_symmetric_2006,
+@incollection{moakher_symmetric_2006,
 	address = {Berlin, Heidelberg},
 	title = {Symmetric {Positive}-{Definite} {Matrices}: {From} {Geometry} to {Applications} and {Visualization}},
 	isbn = {978-3-540-25032-6 978-3-540-31272-7},
@@ -60,9 +60,8 @@
 	author = {Moakher, Maher and Batchelor, Philipp G.},
 	editor = {Weickert, Joachim and Hagen, Hans},
 	year = {2006},
-	note = {DOI: 10.1007/3-540-31272-2\_17},
 	pages = {285--298},
-	file = {[Moakher_Batchelor.2006] Symmetric Positive-Definite Matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S3. Metric/[Moakher_Batchelor.2006] Symmetric Positive-Definite Matrices.pdf:application/pdf}
+	file = {[Moakher.2006] Symmetric Positive-Definite Matrices.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Moakher.2006] Symmetric Positive-Definite Matrices.pdf:application/pdf}
 }
 
 @inproceedings{cherian_efficient_2011,
@@ -76,7 +75,7 @@
 	month = nov,
 	year = {2011},
 	pages = {2399--2406},
-	file = {[Cherian.2011] Efficient similarity search for covariance matrices via the Jensen-Bregman.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S3. Metric/[Cherian.2011] Efficient similarity search for covariance matrices via the Jensen-Bregman.pdf:application/pdf}
+	file = {[Cherian.2011] Efficient similarity search for covariance matrices via the Jensen-Bregman.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Cherian.2011] Efficient similarity search for covariance matrices via the Jensen-Bregman.pdf:application/pdf}
 }
 
 @article{engel_overview_2017,
@@ -92,7 +91,7 @@
 	month = apr,
 	year = {2017},
 	pages = {e2880},
-	file = {[Engel.2017] An overview of large-dimensional covariance and precision matrix estimators.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/[Engel.2017] An overview of large-dimensional covariance and precision matrix estimators.pdf:application/pdf}
+	file = {[Engel.2017] An overview of large-dimensional covariance and precision matrix estimators.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Engel.2017] An overview of large-dimensional covariance and precision matrix estimators.pdf:application/pdf}
 }
 
 @article{cai_estimating_2016,
@@ -108,7 +107,7 @@
 	author = {Cai, T. Tony and Ren, Zhao and Zhou, Harrison H.},
 	year = {2016},
 	pages = {1--59},
-	file = {[Cai.2016] Estimating structured high-dimensional covariance and precision matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/[Cai.2016] Estimating structured high-dimensional covariance and precision matrices.pdf:application/pdf}
+	file = {[Cai.2016] Estimating structured high-dimensional covariance and precision matrices.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Cai.2016] Estimating structured high-dimensional covariance and precision matrices.pdf:application/pdf}
 }
 
 @article{dryden_non-euclidean_2009,
@@ -124,7 +123,7 @@
 	month = sep,
 	year = {2009},
 	pages = {1102--1123},
-	file = {[Dryden.2009] Non-Euclidean statistics for covariance matrices, with applications to.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S4. Mean/[Dryden.2009] Non-Euclidean statistics for covariance matrices, with applications to.pdf:application/pdf}
+	file = {[Dryden.2009] Non-Euclidean statistics for covariance matrices, with applications to.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Dryden.2009] Non-Euclidean statistics for covariance matrices, with applications to.pdf:application/pdf}
 }
 
 @article{alvarez_bayesian_2014,
@@ -132,8 +131,7 @@
 	journal = {ArXiv e-prints},
 	author = {Alvarez, I. and Niemi, J. and Simpson, M.},
 	year = {2014},
-	keywords = {Statistics - Methodology},
-	file = {[Alvarez.2014] Bayesian inference for a covariance matrix.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S6. EstBayes/[Alvarez.2014] Bayesian inference for a covariance matrix.pdf:application/pdf}
+	keywords = {Statistics - Methodology}
 }
 
 @article{barnard_modeling_2000,
@@ -146,8 +144,7 @@
 	author = {Barnard, John and McCulloch, Robert and Meng, Xiao Li},
 	year = {2000},
 	keywords = {General location model, General location-scale model, Gibbs sampler, Hierarchical models, Markov chain Monte Carlo, Wishart distribution},
-	pages = {1281--1311},
-	file = {[Barnard.2000] Modeling covariance matrices in terms of standard deviations and correlations,.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S6. EstBayes/[Barnard.2000] Modeling covariance matrices in terms of standard deviations and correlations,.pdf:application/pdf}
+	pages = {1281--1311}
 }
 
 @article{cai_adaptive_2011,
@@ -163,10 +160,10 @@
 	month = jun,
 	year = {2011},
 	pages = {672--684},
-	file = {[Cai_Liu.2011] Adaptive Thresholding for Sparse Covariance Matrix Estimation.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Cai_Liu.2011] Adaptive Thresholding for Sparse Covariance Matrix Estimation.pdf:application/pdf}
+	file = {[Cai.2011] Adaptive Thresholding for Sparse Covariance Matrix Estimation.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Cai.2011] Adaptive Thresholding for Sparse Covariance Matrix Estimation.pdf:application/pdf}
 }
 
-@incollection{grafarend_metric_2003,
+@incollection{forstner_metric_2003,
 	address = {Berlin, Heidelberg},
 	title = {A {Metric} for {Covariance} {Matrices}},
 	isbn = {978-3-642-07733-3 978-3-662-05296-9},
@@ -177,9 +174,8 @@
 	author = {Förstner, Wolfgang and Moonen, Boudewijn},
 	editor = {Grafarend, Erik W. and Krumm, Friedrich W. and Schwarze, Volker S.},
 	year = {2003},
-	note = {DOI: 10.1007/978-3-662-05296-9\_31},
 	pages = {299--309},
-	file = {[Förstner_Moonen.2003] A Metric for Covariance Matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S3. Metric/[Förstner_Moonen.2003] A Metric for Covariance Matrices.pdf:application/pdf}
+	file = {[Förstner.2003] A Metric for Covariance Matrices.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Förstner.2003] A Metric for Covariance Matrices.pdf:application/pdf}
 }
 
 @article{donoho_wavelet_1995,
@@ -191,7 +187,7 @@
 	author = {Donoho, David L. and Johnstone, Iain M. and Kerkyacharian, Gerard and Picard, Dominique},
 	year = {1995},
 	pages = {301--369},
-	file = {[Donoho.1995] Wavelet Shrinkage.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Donoho.1995] Wavelet Shrinkage.pdf:application/pdf}
+	file = {[Donoho.1995] Wavelet Shrinkage.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Donoho.1995] Wavelet Shrinkage.pdf:application/pdf}
 }
 
 @article{antoniadis_regularization_2001,
@@ -207,7 +203,7 @@
 	month = sep,
 	year = {2001},
 	pages = {939--967},
-	file = {[Antoniadis_Fan.2001] Regularization of Wavelet Approximations.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Antoniadis_Fan.2001] Regularization of Wavelet Approximations.pdf:application/pdf}
+	file = {[Antoniadis.2001] Regularization of Wavelet Approximations.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Antoniadis.2001] Regularization of Wavelet Approximations.pdf:application/pdf}
 }
 
 @article{fan_variable_2001,
@@ -219,7 +215,7 @@
 	author = {Fan, Jianqing and Li, Runze},
 	year = {2001},
 	pages = {1348--1360},
-	file = {[Fan_Li.2001] Variable Selection via Nonconcave Penalized Likelihood and Its Oracle Properties.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Fan_Li.2001] Variable Selection via Nonconcave Penalized Likelihood and Its Oracle Properties.pdf:application/pdf}
+	file = {[Fan.2001] Variable Selection via Nonconcave Penalized Likelihood and Its Oracle Properties.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Fan.2001] Variable Selection via Nonconcave Penalized Likelihood and Its Oracle Properties.pdf:application/pdf}
 }
 
 @article{antoniadis_wavelets_1997,
@@ -233,7 +229,7 @@
 	month = aug,
 	year = {1997},
 	pages = {97},
-	file = {[Antoniadis.1997] Wavelets in statistics.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Antoniadis.1997] Wavelets in statistics.pdf:application/pdf}
+	file = {[Antoniadis.1997] Wavelets in statistics.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Antoniadis.1997] Wavelets in statistics.pdf:application/pdf}
 }
 
 @article{zhang_nearly_2010,
@@ -249,7 +245,7 @@
 	month = apr,
 	year = {2010},
 	pages = {894--942},
-	file = {[Zhang.2010] Nearly unbiased variable selection under minimax concave penalty.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Zhang.2010] Nearly unbiased variable selection under minimax concave penalty.pdf:application/pdf}
+	file = {[Zhang.2010] Nearly unbiased variable selection under minimax concave penalty.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Zhang.2010] Nearly unbiased variable selection under minimax concave penalty.pdf:application/pdf}
 }
 
 @article{fan_large_2013,
@@ -265,7 +261,7 @@
 	month = sep,
 	year = {2013},
 	pages = {603--680},
-	file = {[Fan.2013] Large covariance estimation by thresholding principal orthogonal complements.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Fan.2013] Large covariance estimation by thresholding principal orthogonal complements.pdf:application/pdf}
+	file = {[Fan.2013] Large covariance estimation by thresholding principal orthogonal complements.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Fan.2013] Large covariance estimation by thresholding principal orthogonal complements.pdf:application/pdf}
 }
 
 @article{qi_quadratically_2006,
@@ -281,7 +277,7 @@
 	month = jan,
 	year = {2006},
 	pages = {360--385},
-	file = {[Qi_Sun.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Qi_Sun.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:application/pdf}
+	file = {[Qi.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Qi.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:application/pdf}
 }
 
 @article{yuan_model_2007,
@@ -293,7 +289,7 @@
 	author = {Yuan, Ming and Lin, Yi},
 	year = {2007},
 	pages = {19--35},
-	file = {[Yuan_Lin.2007] Model Selection and Estimation in the Gaussian Graphical Model.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Yuan_Lin.2007] Model Selection and Estimation in the Gaussian Graphical Model.pdf:application/pdf}
+	file = {[Yuan.2007] Model Selection and Estimation in the Gaussian Graphical Model.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Yuan.2007] Model Selection and Estimation in the Gaussian Graphical Model.pdf:application/pdf}
 }
 
 @article{friedman_sparse_2008,
@@ -309,7 +305,7 @@
 	month = jul,
 	year = {2008},
 	pages = {432--441},
-	file = {[Friedman.2008] Sparse inverse covariance estimation with the graphical lasso.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Friedman.2008] Sparse inverse covariance estimation with the graphical lasso.pdf:application/pdf}
+	file = {[Friedman.2008] Sparse inverse covariance estimation with the graphical lasso.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Friedman.2008] Sparse inverse covariance estimation with the graphical lasso.pdf:application/pdf}
 }
 
 @inproceedings{banerjee_convex_2006,
@@ -323,7 +319,7 @@
 	author = {Banerjee, Onureena and Ghaoui, Laurent El and d'Aspremont, Alexandre and Natsoulis, Georges},
 	year = {2006},
 	pages = {89--96},
-	file = {[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:application/pdf}
+	file = {[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:application/pdf}
 }
 
 @article{banerjee_posterior_2014,
@@ -338,7 +334,7 @@
 	author = {Banerjee, Sayantan and Ghosal, Subhashis},
 	year = {2014},
 	pages = {2111--2137},
-	file = {[Banerjee_Ghosal.2014] Posterior convergence rates for estimating large precision matrices using.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Banerjee_Ghosal.2014] Posterior convergence rates for estimating large precision matrices using.pdf:application/pdf}
+	file = {[Banerjee.2014] Posterior convergence rates for estimating large precision matrices using.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Banerjee.2014] Posterior convergence rates for estimating large precision matrices using.pdf:application/pdf}
 }
 
 @article{lee_estimating_2017,
@@ -348,7 +344,7 @@
 	month = jul,
 	year = {2017},
 	keywords = {Mathematics - Statistics Theory},
-	file = {[Lee_Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Lee_Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:application/pdf}
+	file = {[Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:application/pdf}
 }
 
 @article{an_hypothesis_2014,
@@ -364,7 +360,7 @@
 	month = jun,
 	year = {2014},
 	pages = {477--483},
-	file = {[An.2014] Hypothesis testing for band size detection of high-dimensional banded precision.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[An.2014] Hypothesis testing for band size detection of high-dimensional banded precision.pdf:application/pdf}
+	file = {[An.2014] Hypothesis testing for band size detection of high-dimensional banded precision.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[An.2014] Hypothesis testing for band size detection of high-dimensional banded precision.pdf:application/pdf}
 }
 
 @article{bickel_regularized_2008,
@@ -380,7 +376,7 @@
 	month = feb,
 	year = {2008},
 	pages = {199--227},
-	file = {[Bickel_Levina.2008] Regularized estimation of large covariance matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Bickel_Levina.2008] Regularized estimation of large covariance matrices.pdf:application/pdf}
+	file = {[Bickel.2008] Regularized estimation of large covariance matrices.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Bickel.2008] Regularized estimation of large covariance matrices.pdf:application/pdf}
 }
 
 @article{cai_optimal_2013,
@@ -395,8 +391,7 @@
 	author = {Cai, T. Tony and Ma, Zongming},
 	month = nov,
 	year = {2013},
-	pages = {2359--2388},
-	file = {[Cai_Ma.2013] Optimal hypothesis testing for high dimensional covariance matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Cai_Ma.2013] Optimal hypothesis testing for high dimensional covariance matrices.pdf:application/pdf}
+	pages = {2359--2388}
 }
 
 @article{lee_maximum_2018,
@@ -407,9 +402,8 @@
 	author = {Lee, Kyoungjae and Lin, Lizhen and Dunson, David},
 	month = sep,
 	year = {2018},
-	note = {arXiv: 1809.03105},
 	keywords = {Statistics - Methodology},
-	file = {[Lee.2018] Maximum Pairwise Bayes Factors for Covariance Structure Testing.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S7. BayesTest/[Lee.2018] Maximum Pairwise Bayes Factors for Covariance Structure Testing.pdf:application/pdf;arXiv.org Snapshot:/home/kisung/.mozilla/firefox/7xt7fha3.default/zotero/storage/Y6GFN5MB/1809.html:text/html}
+	file = {[Lee.2018] Maximum Pairwise Bayes Factors for Covariance Structure Testing.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Lee.2018] Maximum Pairwise Bayes Factors for Covariance Structure Testing.pdf:application/pdf}
 }
 
 @article{srivastava_tests_2014,
@@ -424,7 +418,7 @@
 	month = sep,
 	year = {2014},
 	pages = {289--309},
-	file = {[Srivastava.2014] Tests for covariance matrices in high dimension with less sample size.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S5. Tests/[Srivastava.2014] Tests for covariance matrices in high dimension with less sample size.pdf:application/pdf}
+	file = {[Srivastava.2014] Tests for covariance matrices in high dimension with less sample size.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Srivastava.2014] Tests for covariance matrices in high dimension with less sample size.pdf:application/pdf}
 }
 
 @article{lan_testing_2015,
@@ -441,7 +435,7 @@
 	month = jan,
 	year = {2015},
 	pages = {76--86},
-	file = {[Lan.2015] Testing the Diagonality of a Large Covariance Matrix in a Regression Setting.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S8. DiagTest/[Lan.2015] Testing the Diagonality of a Large Covariance Matrix in a Regression Setting.pdf:application/pdf}
+	file = {[Lan.2015] Testing the Diagonality of a Large Covariance Matrix in a Regression Setting.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Lan.2015] Testing the Diagonality of a Large Covariance Matrix in a Regression Setting.pdf:application/pdf}
 }
 
 @article{cai_limiting_2011,
@@ -458,5 +452,37 @@
 	month = jun,
 	year = {2011},
 	pages = {1496--1525},
-	file = {[Cai_Jiang.2011] Limiting laws of coherence of random matrices with applications to testing.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S8. DiagTest/[Cai_Jiang.2011] Limiting laws of coherence of random matrices with applications to testing.pdf:application/pdf}
+	file = {[Cai.2011] Limiting laws of coherence of random matrices with applications to testing.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Cai.2011] Limiting laws of coherence of random matrices with applications to testing.pdf:application/pdf}
+}
+
+@article{ledoit_improved_2003,
+	title = {Improved estimation of the covariance matrix of stock returns with an application to portfolio selection},
+	volume = {10},
+	issn = {09275398},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0927539803000070},
+	doi = {10.1016/S0927-5398(03)00007-0},
+	language = {en},
+	number = {5},
+	urldate = {2019-08-23},
+	journal = {Journal of Empirical Finance},
+	author = {Ledoit, Olivier and Wolf, Michael},
+	month = dec,
+	year = {2003},
+	pages = {603--621}
+}
+
+@article{ledoit_well-conditioned_2004,
+	title = {A well-conditioned estimator for large-dimensional covariance matrices},
+	volume = {88},
+	issn = {0047259X},
+	doi = {10.1016/S0047-259X(03)00096-4},
+	language = {en},
+	number = {2},
+	urldate = {2019-08-23},
+	journal = {Journal of Multivariate Analysis},
+	author = {Ledoit, Olivier and Wolf, Michael},
+	month = feb,
+	year = {2004},
+	pages = {365--411},
+	file = {[Ledoit.2004] A well-conditioned estimator for large-dimensional covariance matrices.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Ledoit.2004] A well-conditioned estimator for large-dimensional covariance matrices.pdf:application/pdf}
 }
