--- a/README.Rmd
+++ b/README.Rmd
@@ -54,6 +54,8 @@ We offer various methods for covariance and symmetric positive-definite matrices
 | `CovEst.nearPD`  | [Qi and Sun (2006)][4] | nearest positive-definite matrix projection |
 | `CovEst.soft`    | [Antoniadis and Fan (2001)][5] | soft thresholding |
 | `CovEst.2003LW`  | [Ledoit and Wolf (2003)][17] | linear shrinkage estimation |
+| `CovEst.2010OAS` | [Chen et al. (2010)][18] | oracle approximation shrinkage |
+| `CovEst.2010RBLW` | [Chen et al. (2010)][18] | Rao-Blackwell Ledoit-Wolf estimation |
 
 
 ### (2). Estimation : Precision
@@ -84,6 +86,7 @@ We offer various methods for covariance and symmetric positive-definite matrices
 | `DiagTest1.2015Lan` | [Lan et al. (2015)][16] | Test by Lan, Luo, Tsai, Wang, and Yang |
 
 
+[18]: https://doi.org/10.1109/TSP.2010.2053029
 [17]: https://doi.org/10.1016/S0927-5398(03)00007-0
 [16]: http://www.tandfonline.com/doi/abs/10.1080/07350015.2014.923317
 [15]: http://projecteuclid.org/euclid.aos/1305292044.
