change to outlook

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -3,7 +3,6 @@
 	title = {Sparse permutation invariant covariance estimation},
 	volume = {2},
 	issn = {1935-7524},
-	doi = {10.1214/08-EJS176},
 	language = {en},
 	number = {0},
 	journal = {Electron. J. Statist.},
@@ -17,7 +16,6 @@
 	title = {Improved estimation of the covariance matrix of stock returns with an application to portfolio selection},
 	volume = {10},
 	issn = {09275398},
-	doi = {10.1016/S0927-5398(03)00007-0},
 	language = {en},
 	number = {5},
 	journal = {Journal of Empirical Finance},
@@ -31,7 +29,6 @@
 	title = {A well-conditioned estimator for large-dimensional covariance matrices},
 	volume = {88},
 	issn = {0047259X},
-	doi = {10.1016/S0047-259X(03)00096-4},
 	language = {en},
 	number = {2},
 	journal = {Journal of Multivariate Analysis},
@@ -46,7 +43,6 @@
 	title = {Limiting laws of coherence of random matrices with applications to testing covariance structure and construction of compressed sensing matrices},
 	volume = {39},
 	issn = {0090-5364},
-	doi = {10.1214/11-AOS879},
 	language = {en},
 	number = {3},
 	journal = {The Annals of Statistics},
@@ -61,7 +57,6 @@
 	title = {Testing the {Diagonality} of a {Large} {Covariance} {Matrix} in a {Regression} {Setting}},
 	volume = {33},
 	issn = {0735-0015, 1537-2707},
-	doi = {10.1080/07350015.2014.923317},
 	language = {en},
 	number = {1},
 	journal = {Journal of Business \& Economic Statistics},
@@ -76,7 +71,6 @@
 	title = {Tests for covariance matrices in high dimension with less sample size},
 	volume = {130},
 	issn = {0047259X},
-	doi = {10.1016/j.jmva.2014.06.003},
 	language = {en},
 	journal = {Journal of Multivariate Analysis},
 	author = {Srivastava, Muni S. and Yanagihara, Hirokazu and Kubokawa, Tatsuya},
@@ -90,7 +84,6 @@
 	title = {Optimal hypothesis testing for high dimensional covariance matrices},
 	volume = {19},
 	issn = {1350-7265},
-	doi = {10.3150/12-BEJ455},
 	language = {en},
 	number = {5B},
 	journal = {Bernoulli},
@@ -102,7 +95,6 @@
 
 @article{lee_maximum_2018,
 	title = {Maximum {Pairwise} {Bayes} {Factors} for {Covariance} {Structure} {Testing}},
-	url = {http://arxiv.org/abs/1809.03105},
 	journal = {arXiv:1809.03105 [stat]},
 	author = {Lee, Kyoungjae and Lin, Lizhen and Dunson, David},
 	month = sep,
@@ -115,7 +107,6 @@
 	title = {Regularized estimation of large covariance matrices},
 	volume = {36},
 	issn = {0090-5364},
-	doi = {10.1214/009053607000000758},
 	language = {en},
 	number = {1},
 	journal = {The Annals of Statistics},
@@ -130,7 +121,6 @@
 	title = {Hypothesis testing for band size detection of high-dimensional banded precision matrices},
 	volume = {101},
 	issn = {0006-3444, 1464-3510},
-	doi = {10.1093/biomet/asu006},
 	language = {en},
 	number = {2},
 	journal = {Biometrika},
@@ -155,7 +145,6 @@
 	title = {Posterior convergence rates for estimating large precision matrices using graphical models},
 	volume = {8},
 	issn = {1935-7524},
-	doi = {10.1214/14-EJS945},
 	language = {en},
 	number = {2},
 	journal = {Electronic Journal of Statistics},
@@ -168,7 +157,6 @@
 @inproceedings{banerjee_convex_2006,
 	title = {Convex optimization techniques for fitting sparse {Gaussian} graphical models},
 	isbn = {978-1-59593-383-6},
-	doi = {10.1145/1143844.1143856},
 	language = {en},
 	booktitle = {Proceedings of the 23rd international conference on {Machine} learning},
 	publisher = {ACM Press},
@@ -182,7 +170,6 @@
 	title = {Sparse inverse covariance estimation with the graphical lasso},
 	volume = {9},
 	issn = {1465-4644, 1468-4357},
-	doi = {10.1093/biostatistics/kxm045},
 	language = {en},
 	number = {3},
 	journal = {Biostatistics},
@@ -209,7 +196,6 @@
 	title = {A {Quadratically} {Convergent} {Newton} {Method} for {Computing} the {Nearest} {Correlation} {Matrix}},
 	volume = {28},
 	issn = {0895-4798, 1095-7162},
-	doi = {10.1137/050624509},
 	language = {en},
 	number = {2},
 	journal = {SIAM Journal on Matrix Analysis and Applications},
@@ -224,7 +210,6 @@
 	title = {Large covariance estimation by thresholding principal orthogonal complements},
 	volume = {75},
 	issn = {13697412},
-	doi = {10.1111/rssb.12016},
 	language = {en},
 	number = {4},
 	journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
@@ -239,7 +224,6 @@
 	title = {Nearly unbiased variable selection under minimax concave penalty},
 	volume = {38},
 	issn = {0090-5364},
-	doi = {10.1214/09-AOS729},
 	language = {en},
 	number = {2},
 	journal = {The Annals of Statistics},
@@ -254,7 +238,6 @@
 	title = {Wavelets in statistics: {A} review},
 	volume = {6},
 	issn = {1613-981X},
-	doi = {10.1007/BF03178905},
 	number = {2},
 	journal = {Journal of the Italian Statistical Society},
 	author = {Antoniadis, A.},
@@ -280,7 +263,6 @@
 	title = {Regularization of {Wavelet} {Approximations}},
 	volume = {96},
 	issn = {0162-1459, 1537-274X},
-	doi = {10.1198/016214501753208942},
 	language = {en},
 	number = {455},
 	journal = {Journal of the American Statistical Association},
@@ -334,7 +316,6 @@
 	title = {Adaptive {Thresholding} for {Sparse} {Covariance} {Matrix} {Estimation}},
 	volume = {106},
 	issn = {0162-1459, 1537-274X},
-	doi = {10.1198/jasa.2011.tm10560},
 	language = {en},
 	number = {494},
 	journal = {Journal of the American Statistical Association},
@@ -357,7 +338,6 @@
 	title = {Non-{Euclidean} statistics for covariance matrices, with applications to diffusion tensor imaging},
 	volume = {3},
 	issn = {1932-6157},
-	doi = {10.1214/09-AOAS249},
 	language = {en},
 	number = {3},
 	journal = {The Annals of Applied Statistics},
@@ -373,7 +353,6 @@
 	volume = {10},
 	issn = {1935-7524},
 	shorttitle = {Estimating structured high-dimensional covariance and precision matrices},
-	doi = {10.1214/15-EJS1081},
 	language = {en},
 	number = {1},
 	journal = {Electronic Journal of Statistics},
@@ -387,7 +366,6 @@
 	title = {An overview of large-dimensional covariance and precision matrix estimators with applications in chemometrics},
 	volume = {31},
 	issn = {08869383},
-	doi = {10.1002/cem.2880},
 	language = {en},
 	number = {4},
 	journal = {Journal of Chemometrics},
@@ -401,7 +379,6 @@
 @inproceedings{cherian_efficient_2011,
 	title = {Efficient similarity search for covariance matrices via the {Jensen}-{Bregman} {LogDet} {Divergence}},
 	isbn = {978-1-4577-1102-2 978-1-4577-1101-5 978-1-4577-1100-8},
-	doi = {10.1109/ICCV.2011.6126523},
 	booktitle = {2011 {International} {Conference} on {Computer} {Vision}},
 	publisher = {IEEE},
 	author = {Cherian, Anoop and Sra, Suvrit and Banerjee, Arindam and Papanikolopoulos, Nikolaos},
@@ -429,7 +406,6 @@
 	title = {Log-{Euclidean} metrics for fast and simple calculus on diffusion tensors},
 	volume = {56},
 	issn = {0740-3194, 1522-2594},
-	doi = {10.1002/mrm.20965},
 	language = {en},
 	number = {2},
 	journal = {Magnetic Resonance in Medicine},
@@ -444,8 +420,6 @@
 	title = {An overview of the estimation of large covariance and precision matrices: {Large} covariance estimation},
 	volume = {19},
 	issn = {13684221},
-	shorttitle = {An overview of the estimation of large covariance and precision matrices},
-	doi = {10.1111/ectj.12061},
 	language = {en},
 	number = {1},
 	journal = {The Econometrics Journal},
@@ -460,7 +434,6 @@
 	title = {Covariance regularization by thresholding},
 	volume = {36},
 	issn = {0090-5364},
-	doi = {10.1214/08-AOS600},
 	language = {en},
 	number = {6},
 	journal = {The Annals of Statistics},
@@ -475,21 +448,17 @@
 	title = {Honey, {I} {Shrunk} the {Sample} {Covariance} {Matrix}},
 	volume = {30},
 	issn = {0095-4918},
-	doi = {10.3905/jpm.2004.110},
-	abstract = {The central message of this article is that no one should use the sample covariance matrix for portfolio optimization. It is subject to estimation error of the kind most likely to perturb a mean-variance optimizer. Instead, a matrix can be obtained from the sample covariance matrix through a transformation called shrinkage. This tends to pull the most extreme coefficients toward more central values, systematically reducing estimation error when it matters most. Statistically, the challenge is to know the optimal shrinkage intensity. Shrinkage reduces portfolio tracking error relative to a benchmark index, and substantially raises the manager’s realized information ratio.},
 	number = {4},
 	journal = {The Journal of Portfolio Management},
 	author = {Ledoit, Olivier and Wolf, Michael},
 	year = {2004},
-	pages = {110--119},
-	file = {[Ledoit.2004] Honey, I Shrunk the Sample Covariance Matrix.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Ledoit.2004] Honey, I Shrunk the Sample Covariance Matrix.pdf:application/pdf}
+	pages = {110--119}
 }
 
 @article{chen_shrinkage_2010,
 	title = {Shrinkage {Algorithms} for {MMSE} {Covariance} {Estimation}},
 	volume = {58},
 	issn = {1053-587X, 1941-0476},
-	doi = {10.1109/TSP.2010.2053029},
 	number = {10},
 	journal = {IEEE Transactions on Signal Processing},
 	author = {Chen, Yilun and Wiesel, Ami and Eldar, Yonina C. and Hero, Alfred O.},
