--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/CovTools?color=green)](https://cran.r-project.org/package=CovTools)
-[![Travis build status](https://travis-ci.org/kyoustat/CovTools.svg?branch=master)](https://travis-ci.org/kyoustat/CovTools)
+[![Travis build status](https://travis-ci.org/kisungyou/CovTools.svg?branch=master)](https://travis-ci.org/kisungyou/CovTools)
 [![](https://cranlogs.r-pkg.org/badges/CovTools)](https://cran.r-project.org/package=CovTools)
 <!-- badges: end -->
 
@@ -35,20 +35,20 @@ or the development version from github:
 ```r
 ## install.packages("devtools")
 ## library(devtools)
-devtools::install_github("kyoustat/CovTools")
+devtools::install_github("kisungyou/CovTools")
 ```
 
 ## List of Available Methods
 
 We offer various methods for covariance and symmetric positive-definite matrices. Below is the list of functions implemented in our package.
 
-### (0). Elementary Operations
+### (0) Elementary Operations
 | function name | description |
 |---------------|:-------------------|
 | `CovDist` | computes pairwise distance for symmetric positive-definite matrices |
 | `CovMean` | estimate mean/average covariance matrix |
 
-### (1). Estimation : Covariance
+### (1) Estimation : Covariance
 | function name | authors | description    |
 |---------------|------------------|:-------------------|
 | `CovEst.adaptive`| [Cai and Liu (2011)][1] | adaptive thresholding |
@@ -61,7 +61,7 @@ We offer various methods for covariance and symmetric positive-definite matrices
 | `CovEst.2010RBLW` | [Chen et al. (2010)][18] | Rao-Blackwell Ledoit-Wolf estimation |
 
 
-### (2). Estimation : Precision
+### (2) Estimation : Precision
 | function name | authors | description    |
 |---------------|------------------|:-------------------|
 | `PreEst.2014An` | [An et al. (2014)][6] | banded precision estimation via bandwidth test |
@@ -69,19 +69,19 @@ We offer various methods for covariance and symmetric positive-definite matrices
 | `PreEst.2017Lee` | [Lee and Lee (2017)][8] | Bayesian estimation of a banded precision matrix |
 | `PreEst.glasso` | [Friedman et al. (2008)][9] | graphical lasso |
 
-### (3). Hypothesis Test : 1-sample 
+### (3) Hypothesis Test : 1-sample 
 | function name | authors | description    |
 |---------------|------------------|:-------------------|
 | `BCovTeset1.mxPBF` | [Lee et al. (2018)][10] | Bayesian test using Maximum Pairwise Bayes Factor |
 | `CovTest1.2013Cai` | [Cai and Ma (2013)][11] | Test by Cai and Ma |
 | `CovTest1.2014Srivastava` | [Srivastava et al. (2014)][12] | Test by Srivastava, Yanagihara, and Kubokawa |
 
-### (4). Hypothesis Test : 2-sample
+### (4) Hypothesis Test : 2-sample
 | function name | authors | description    |
 |---------------|------------------|:-------------------|
 | `CovTest2.2013Cai` | [Cai and Ma (2013)][13] | Test by Cai and Ma |
 
-### (5). Hypothesis Test : 1-sample Diagonal
+### (5) Hypothesis Test : 1-sample Diagonal
 | function name | authors | description    |
 |---------------|------------------|:-------------------|
 | `BDiagTest1.mxPBF`  | [Lee et al. (2018)][14] | Bayesian Test using Maximum Pairwise Bayes Factor |
